--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
     line-height: 1.5;
     font-weight: 400;
     font-synthesis: none;
-    font-family: "Lexend", sans-serif;
+    font-family: "Lexend", "Helvetica", serif;
     font-optical-sizing: auto;
     font-style: normal;
     text-rendering: optimizeLegibility;
