--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -6,9 +6,12 @@ h1 {
     margin: 0;
     padding: 0;
     font-family: "Lexend-Regular", "Helvetica", serif;
-    text-shadow: 0 4px 4px #00000040;
     line-height: 6vw;
     letter-spacing: 0;
+}
+
+.shadow-h1 {
+    text-shadow: 0 4px 4px #00000040;
 }
 
 p {
@@ -18,3 +21,12 @@ p {
     letter-spacing: 0;
     white-space: nowrap;
 }
+
+.img-animation {
+    transition: transform 0.2s ease;
+}
+
+.img-animation:hover {
+    transform: scale(1.1);
+}
+
