--- a/src/components/CashOptionCards/styles.css
+++ b/src/components/CashOptionCards/styles.css
@@ -2,7 +2,7 @@
     background-color: #004f96;
     width: 400px;
     height: 26vw;
-    border-color: #003D7D;
+    border-color: #003d7d;
     border-width: 20px;
     transition: transform 0.3s ease;
 }
