--- a/src/components/BlueButtons/styles.css
+++ b/src/components/BlueButtons/styles.css
@@ -1,5 +1,5 @@
 .button-animation {
-    background-color: #0073E6;
+    background-color: #0073e6;
     width: 100%;
     height: 7vh;
     white-space: nowrap;
