corrigindo problemas e finalizando o tratamento de erro das rotas

--- a/src/components/SearchBar/styles.css
+++ b/src/components/SearchBar/styles.css
@@ -5,7 +5,7 @@
     background: transparent;
     width: 44vw;
     color: #ffffff;
-    font-size: 1.21vw;
+    font-size: 22px;
 }
 
 .CampoTexto:focus {
